<resources>
    <string name="app_name">Registro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_dokter_jadwal">Nama Dokter</string>
    <string name="ruang_periksa_jadwal">Ruang Periksa</string>
    <string name="nama_klinik_jadwal">Nama Klinik</string>
    <string name="jam_awal_jadwal">Jam Awal</string>
    <string name="jam_akhir_jadwal">Jam Akhir</string>
    <string name="kuota_perjam_jadwal">Kuota Per Jam</string>
    <string name="hari_praktek_jadwal">Hari Praktek</string>
    <string name="title_activity_login">Masuk Akun</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="penjamin">
        <item>-- Pilih Penjamin --</item>
        <item>BPJS</item>
        <item>Asuransi</item>
        <item>UMUM</item>
    </string-array>

    <string-array name="jenis_periksa">
        <item>-- Pilih Jenis Periksa --</item>
        <item>Poli</item>
        <item>Dokter</item>
    </string-array>
</resources>
